[package]
name = "event-handler-rust"
version = "0.1.0"
edition = "2021"
description = "Event Handler WASM plugin for Signal K - Rust implementation demonstrating server events"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
